fixed modal opening on load, enhanced readability of js code, added new modal view for smaller devices and centered background video and made it responsive

--- a/public/css/menu.css
+++ b/public/css/menu.css
@@ -1,9 +1,9 @@
 @import url(https://fonts.googleapis.com/css?family=Teko:700);
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css");
 :root{
-     --border-color:#a8a8a8;
-     --border-color-hover:#e9e9e9;
-     --btn-text-color:#b3b3b3;
+     --border-color:#e2e2e2;
+     --border-color-hover:#f3f3f3;
+     --btn-text-color:#e0e0e0;
      --btn-text-color-hover:var(--border-color-hover)
 }
 
@@ -19,11 +19,14 @@
      position: fixed;
      top: 0;
      left: 0;
-     min-width: 100%;
-     min-height: 100%;
-     opacity: 0.3;
+     object-fit: cover;
+     width: 100%;
+     height: 115%;
+     opacity: 0.5;
      z-index: -1;
 }
+
+
 
 header{
      font-family: 'Teko';
@@ -57,12 +60,16 @@ header{
 
 
 .my-modal{
+     
      position: fixed;
      top: 0;
      left: 0;
      background-color: rgba(0, 0, 0, 0.308);
      width: 100%;
      height: 100%;
+     display: flex;
+     justify-content: center;
+     align-items: center;
 }
 
 
@@ -81,16 +88,69 @@ header{
      right: 0;
 }
 
-@media screen and (max-width:420px) {
-     .bg-video{
-     left:-200%
-     }
+.sm-close-btn{
+     margin-top:5%;
+     background-color: transparent;
+     border:2px solid var(--border-color);
+     padding: 2% 15%;
+     align-self: flex-end;
+     margin-bottom: 20%;
+     font-size: x-large;
+}
+
+@media screen and (max-width:1100px) {
+     
      
      .menu-btn,.menu-btn:hover,.menu-btn:focus:hover{
           width: 50%;
      }
      .my-modal-body{
+          width: 70%;
+          height: 80%;
+     }
+}
+
+.slideup{
+     animation-name:slideup;
+     animation-duration: 1s;
+     animation-fill-mode: forwards;
+}
+
+@keyframes slideup {
+     from{
+         height: 0;
+         
+     }
+     to{
+          height: 85%;
+          overflow: auto;
+          
+     }
+}
+
+@media screen and (max-width:420px) {
+    
+     
+     .menu-btn,.menu-btn:hover,.menu-btn:focus:hover{
+          width: 50%;
+     }
+     .my-modal{
+          
+          align-items: flex-end;
+     }
+     .my-modal-body{
+          
           width: 100%;
-          height: 100%;
+          height: 0%;
+          background-color: black;
+
+     }
+
+
+
+
+
+     ul{
+      
      }
 }
